# spark-mpi-adapter

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  spark-mpi-adapter.sbt
applications/: closing_the_gap.sbt  test.sh
applications/results/: pagerank_ref.txt
applications/src/main/scala/: native_interface.scala  native_pagerank.scala  pagerank.scala
examples/: CMakeLists.txt  spark-mpi-adapter-examples.sbt
examples/src/main/native/: vector-increment.cpp
examples/src/main/scala/com/intel/: NativeVectorIncrement.scala  VectorIncrement.scala
scripts/: mpiclear.sh
src/: Pagerank.cc  SaveHDFS.cc  SparkIntegration.h
src/main/native/: shm-to-hdfs.cpp  spark-integration.h
src/main/scala/com/intel/: SparkNativeInterface.scala
