cmake_minimum_required (VERSION 2.6)
project (spark-mpi-adapter)
include_directories(${PROJECT_SOURCE_DIR}/src/main/native)
find_package(MPI REQUIRED)
include_directories(${MPI_INCLUDE_PATH})
include_directories($ENV{HADOOP_HDFS_HOME}/include)
add_executable(shm-to-hdfs ${PROJECT_SOURCE_DIR}/src/main/native/shm-to-hdfs.cpp)
target_link_libraries(shm-to-hdfs ${MPI_CXX_LIBRARIES})
target_link_libraries(shm-to-hdfs $ENV{HADOOP_HDFS_HOME}/lib/native/libhdfs.so)
add_definitions(-std=c++11)
