cmake_minimum_required (VERSION 2.6)
project (spark-mpi-adapter-examples)
include_directories(${PROJECT_SOURCE_DIR}/src/main/native)
find_package(MPI REQUIRED)
include_directories(${MPI_INCLUDE_PATH})
include_directories($ENV{MPI_ADAPTER_FOR_SPARK_HOME})
include_directories($ENV{HADOOP_HDFS_HOME}/include)
add_executable(vector-increment ${PROJECT_SOURCE_DIR}/src/main/native/vector-increment.cpp)
target_link_libraries(vector-increment ${MPI_CXX_LIBRARIES})
target_link_libraries(vector-increment $ENV{HADOOP_HDFS_HOME}/lib/native/libhdfs.so)
add_definitions(-std=c++11)
